@@ -10028,6 +10028,9 @@ name|TableDesc
 name|outInfo
 decl_stmt|;
 name|TableDesc
+name|errInfo
+decl_stmt|;
+name|TableDesc
 name|inInfo
 decl_stmt|;
 name|String
@@ -10276,6 +10279,27 @@ name|defaultOutputCols
 argument_list|)
 expr_stmt|;
 block|}
+comment|// Error stream always uses the default serde with a single column
+name|errInfo
+operator|=
+name|PlanUtils
+operator|.
+name|getTableDesc
+argument_list|(
+name|serde
+argument_list|,
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|Utilities
+operator|.
+name|tabCode
+argument_list|)
+argument_list|,
+literal|"KEY"
+argument_list|)
+expr_stmt|;
 comment|// Output record readers
 name|Class
 argument_list|<
@@ -10319,6 +10343,17 @@ name|inputRecordWriterNum
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|RecordReader
+argument_list|>
+name|errRecordReader
+init|=
+name|getDefaultRecordReader
+argument_list|()
+decl_stmt|;
 name|Operator
 name|output
 init|=
@@ -10354,6 +10389,10 @@ argument_list|,
 name|outInfo
 argument_list|,
 name|outRecordReader
+argument_list|,
+name|errRecordReader
+argument_list|,
+name|errInfo
 argument_list|)
 argument_list|,
 operator|new
@@ -10435,6 +10474,75 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+try|try
+block|{
+return|return
+operator|(
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|RecordReader
+argument_list|>
+operator|)
+name|Class
+operator|.
+name|forName
+argument_list|(
+name|name
+argument_list|,
+literal|true
+argument_list|,
+name|JavaUtils
+operator|.
+name|getClassLoader
+argument_list|()
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|ClassNotFoundException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+specifier|private
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|RecordReader
+argument_list|>
+name|getDefaultRecordReader
+parameter_list|()
+throws|throws
+name|SemanticException
+block|{
+name|String
+name|name
+decl_stmt|;
+name|name
+operator|=
+name|conf
+operator|.
+name|getVar
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVESCRIPTRECORDREADER
+argument_list|)
+expr_stmt|;
 try|try
 block|{
 return|return
