@@ -123,6 +123,19 @@ name|RecordReader
 argument_list|>
 name|outRecordReaderClass
 decl_stmt|;
+specifier|private
+name|TableDesc
+name|scriptErrInfo
+decl_stmt|;
+specifier|private
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|RecordReader
+argument_list|>
+name|errRecordReaderClass
+decl_stmt|;
 specifier|public
 name|ScriptDesc
 parameter_list|()
@@ -159,6 +172,19 @@ extends|extends
 name|RecordReader
 argument_list|>
 name|outRecordReaderClass
+parameter_list|,
+specifier|final
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|RecordReader
+argument_list|>
+name|errRecordReaderClass
+parameter_list|,
+specifier|final
+name|TableDesc
+name|scriptErrInfo
 parameter_list|)
 block|{
 name|this
@@ -190,6 +216,18 @@ operator|.
 name|outRecordReaderClass
 operator|=
 name|outRecordReaderClass
+expr_stmt|;
+name|this
+operator|.
+name|errRecordReaderClass
+operator|=
+name|errRecordReaderClass
+expr_stmt|;
+name|this
+operator|.
+name|scriptErrInfo
+operator|=
+name|scriptErrInfo
 expr_stmt|;
 block|}
 annotation|@
@@ -258,6 +296,31 @@ expr_stmt|;
 block|}
 specifier|public
 name|TableDesc
+name|getScriptErrInfo
+parameter_list|()
+block|{
+return|return
+name|scriptErrInfo
+return|;
+block|}
+specifier|public
+name|void
+name|setScriptErrInfo
+parameter_list|(
+specifier|final
+name|TableDesc
+name|scriptErrInfo
+parameter_list|)
+block|{
+name|this
+operator|.
+name|scriptErrInfo
+operator|=
+name|scriptErrInfo
+expr_stmt|;
+block|}
+specifier|public
+name|TableDesc
 name|getScriptInputInfo
 parameter_list|()
 block|{
@@ -314,6 +377,42 @@ operator|.
 name|outRecordReaderClass
 operator|=
 name|outRecordReaderClass
+expr_stmt|;
+block|}
+comment|/**    * @return the errRecordReaderClass    */
+specifier|public
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|RecordReader
+argument_list|>
+name|getErrRecordReaderClass
+parameter_list|()
+block|{
+return|return
+name|errRecordReaderClass
+return|;
+block|}
+comment|/**    * @param errRecordReaderClass    *          the errRecordReaderClass to set    */
+specifier|public
+name|void
+name|setErrRecordReaderClass
+parameter_list|(
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|RecordReader
+argument_list|>
+name|errRecordReaderClass
+parameter_list|)
+block|{
+name|this
+operator|.
+name|errRecordReaderClass
+operator|=
+name|errRecordReaderClass
 expr_stmt|;
 block|}
 comment|/**    * @return the inRecordWriterClass    */
