@@ -1477,6 +1477,23 @@ argument_list|,
 name|TextRecordReader
 operator|.
 name|class
+argument_list|,
+name|TextRecordReader
+operator|.
+name|class
+argument_list|,
+name|PlanUtils
+operator|.
+name|getDefaultTableDesc
+argument_list|(
+literal|""
+operator|+
+name|Utilities
+operator|.
+name|tabCode
+argument_list|,
+literal|"key"
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|Operator
