@@ -66,7 +66,7 @@
          </void> 
          <void method="put"> 
           <string>transient_lastDdlTime</string> 
-          <string>1266455880</string> 
+          <string>1267374964</string> 
          </void> 
         </object> 
        </void> 
@@ -331,6 +331,9 @@
                 </void> 
                 <void property="conf"> 
                  <object class="org.apache.hadoop.hive.ql.plan.ScriptDesc"> 
+                  <void property="errRecordReaderClass"> 
+                   <class>org.apache.hadoop.hive.ql.exec.TextRecordReader</class> 
+                  </void> 
                   <void property="inRecordWriterClass"> 
                    <class>org.apache.hadoop.hive.ql.exec.TextRecordWriter</class> 
                   </void> 
@@ -339,6 +342,35 @@
                   </void> 
                   <void property="scriptCmd"> 
                    <string>cat</string> 
+                  </void> 
+                  <void property="scriptErrInfo"> 
+                   <object class="org.apache.hadoop.hive.ql.plan.TableDesc"> 
+                    <void property="deserializerClass"> 
+                     <class>org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe</class> 
+                    </void> 
+                    <void property="inputFileFormatClass"> 
+                     <class>org.apache.hadoop.mapred.TextInputFormat</class> 
+                    </void> 
+                    <void property="outputFileFormatClass"> 
+                     <class>org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat</class> 
+                    </void> 
+                    <void property="properties"> 
+                     <object class="java.util.Properties"> 
+                      <void method="put"> 
+                       <string>field.delim</string> 
+                       <string>9</string> 
+                      </void> 
+                      <void method="put"> 
+                       <string>columns</string> 
+                       <string>KEY</string> 
+                      </void> 
+                      <void method="put"> 
+                       <string>serialization.format</string> 
+                       <string>9</string> 
+                      </void> 
+                     </object> 
+                    </void> 
+                   </object> 
                   </void> 
                   <void property="scriptInputInfo"> 
                    <object class="org.apache.hadoop.hive.ql.plan.TableDesc"> 
@@ -790,7 +822,7 @@
           </void> 
           <void method="put"> 
            <string>transient_lastDdlTime</string> 
-           <string>1266455880</string> 
+           <string>1267374964</string> 
           </void> 
          </object> 
         </void> 
@@ -837,7 +869,7 @@
                   <void property="conf"> 
                    <object class="org.apache.hadoop.hive.ql.plan.FileSinkDesc"> 
                     <void property="dirName"> 
-                     <string>file:/data/users/njain/hive1/hive1/build/ql/scratchdir/hive_2010-02-17_17-18-01_084_2871398099488603052/10001</string> 
+                     <string>file:/data/users/njain/hive1/hive1/build/ql/scratchdir/hive_2010-02-28_08-36-05_651_2136775280486866599/10001</string> 
                     </void> 
                     <void property="numFiles"> 
                      <int>1</int> 
@@ -936,6 +968,9 @@
               </void> 
               <void property="conf"> 
                <object class="org.apache.hadoop.hive.ql.plan.ScriptDesc"> 
+                <void property="errRecordReaderClass"> 
+                 <class>org.apache.hadoop.hive.ql.exec.TextRecordReader</class> 
+                </void> 
                 <void property="inRecordWriterClass"> 
                  <class>org.apache.hadoop.hive.ql.exec.TextRecordWriter</class> 
                 </void> 
@@ -944,6 +979,35 @@
                 </void> 
                 <void property="scriptCmd"> 
                  <string>uniq -c | sed &quot;s@^ *@@&quot; | sed &quot;s@\t@_@&quot; | sed &quot;s@ @\t@&quot;</string> 
+                </void> 
+                <void property="scriptErrInfo"> 
+                 <object class="org.apache.hadoop.hive.ql.plan.TableDesc"> 
+                  <void property="deserializerClass"> 
+                   <class>org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe</class> 
+                  </void> 
+                  <void property="inputFileFormatClass"> 
+                   <class>org.apache.hadoop.mapred.TextInputFormat</class> 
+                  </void> 
+                  <void property="outputFileFormatClass"> 
+                   <class>org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat</class> 
+                  </void> 
+                  <void property="properties"> 
+                   <object class="java.util.Properties"> 
+                    <void method="put"> 
+                     <string>field.delim</string> 
+                     <string>9</string> 
+                    </void> 
+                    <void method="put"> 
+                     <string>columns</string> 
+                     <string>KEY</string> 
+                    </void> 
+                    <void method="put"> 
+                     <string>serialization.format</string> 
+                     <string>9</string> 
+                    </void> 
+                   </object> 
+                  </void> 
+                 </object> 
                 </void> 
                 <void property="scriptInputInfo"> 
                  <object class="org.apache.hadoop.hive.ql.plan.TableDesc"> 
