@@ -26,7 +26,7 @@
            <boolean>true</boolean> 
           </void> 
           <void property="sourceDir"> 
-           <string>file:/data/users/njain/hive1/hive1/build/ql/scratchdir/hive_2010-02-17_17-18-07_733_959669286421354323/10000</string> 
+           <string>file:/data/users/njain/hive1/hive1/build/ql/scratchdir/hive_2010-02-28_08-36-11_936_6235612775515748937/10000</string> 
           </void> 
           <void property="table"> 
            <object id="TableDesc0" class="org.apache.hadoop.hive.ql.plan.TableDesc"> 
@@ -83,7 +83,7 @@
               </void> 
               <void method="put"> 
                <string>transient_lastDdlTime</string> 
-               <string>1266455887</string> 
+               <string>1267374971</string> 
               </void> 
              </object> 
             </void> 
@@ -93,7 +93,7 @@
            </object> 
           </void> 
           <void property="tmpDir"> 
-           <string>file:/data/users/njain/hive1/hive1/build/ql/scratchdir/hive_2010-02-17_17-18-07_733_959669286421354323/10001</string> 
+           <string>file:/data/users/njain/hive1/hive1/build/ql/scratchdir/hive_2010-02-28_08-36-11_936_6235612775515748937/10001</string> 
           </void> 
          </object> 
         </void> 
@@ -168,7 +168,7 @@
          </void> 
          <void method="put"> 
           <string>transient_lastDdlTime</string> 
-          <string>1266455886</string> 
+          <string>1267374971</string> 
          </void> 
         </object> 
        </void> 
@@ -433,6 +433,9 @@
                 </void> 
                 <void property="conf"> 
                  <object class="org.apache.hadoop.hive.ql.plan.ScriptDesc"> 
+                  <void property="errRecordReaderClass"> 
+                   <class>org.apache.hadoop.hive.ql.exec.TextRecordReader</class> 
+                  </void> 
                   <void property="inRecordWriterClass"> 
                    <class>org.apache.hadoop.hive.ql.exec.TextRecordWriter</class> 
                   </void> 
@@ -441,6 +444,35 @@
                   </void> 
                   <void property="scriptCmd"> 
                    <string>/bin/cat</string> 
+                  </void> 
+                  <void property="scriptErrInfo"> 
+                   <object class="org.apache.hadoop.hive.ql.plan.TableDesc"> 
+                    <void property="deserializerClass"> 
+                     <class>org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe</class> 
+                    </void> 
+                    <void property="inputFileFormatClass"> 
+                     <class>org.apache.hadoop.mapred.TextInputFormat</class> 
+                    </void> 
+                    <void property="outputFileFormatClass"> 
+                     <class>org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat</class> 
+                    </void> 
+                    <void property="properties"> 
+                     <object class="java.util.Properties"> 
+                      <void method="put"> 
+                       <string>field.delim</string> 
+                       <string>9</string> 
+                      </void> 
+                      <void method="put"> 
+                       <string>columns</string> 
+                       <string>KEY</string> 
+                      </void> 
+                      <void method="put"> 
+                       <string>serialization.format</string> 
+                       <string>9</string> 
+                      </void> 
+                     </object> 
+                    </void> 
+                   </object> 
                   </void> 
                   <void property="scriptInputInfo"> 
                    <object class="org.apache.hadoop.hive.ql.plan.TableDesc"> 
@@ -815,7 +847,7 @@
           </void> 
           <void method="put"> 
            <string>transient_lastDdlTime</string> 
-           <string>1266455886</string> 
+           <string>1267374971</string> 
           </void> 
          </object> 
         </void> 
@@ -865,7 +897,7 @@
                      <int>1</int> 
                     </void> 
                     <void property="dirName"> 
-                     <string>file:/data/users/njain/hive1/hive1/build/ql/scratchdir/hive_2010-02-17_17-18-07_733_959669286421354323/10000</string> 
+                     <string>file:/data/users/njain/hive1/hive1/build/ql/scratchdir/hive_2010-02-28_08-36-11_936_6235612775515748937/10000</string> 
                     </void> 
                     <void property="numFiles"> 
                      <int>1</int> 
