@@ -234,6 +234,9 @@ Trunk -  Unreleased
     HIVE-1200. Fix CombineHiveInputFormat
     (Zheng Shao via namit)
 
+    HIVE-1204. typedbytes: writing to stderr kills the mapper.
+    (namit via He Yongqiang)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
